header & footer final

--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -1,5 +1,148 @@
 <footer class="footer">
 	<div class="footer__container">
-    footer
+    <div class="footer__main main-footer" data-spollers="767, max">
+      <details class="main-footer__column" open>
+        <summary class="main-footer__title">
+          О компании
+        </summary>
+        <div class="main-footer__body">
+          <a href="#">Компания</a>
+          <a href="#">Сертификаты</a>
+          <a href="#">Технологии производства</a>
+          <a href="#">Сотрудничество</a>
+          <a href="#">Статьи</a>
+          <a href="#">Договор оферты</a>
+          <a href="#">Правила работы интернет-магазина</a>
+          <a href="#">Контакты</a>
+        </div>
+      </details>
+      <details class="main-footer__column" open>
+        <summary class="main-footer__title">
+          Покупателям
+        </summary>
+        <div class="main-footer__body">
+          <a href="#">Программа лояльности</a>
+          <a href="#">Акции и скидки</a>
+          <a href="#">Как заказать</a>
+          <a href="#">Гарантия</a>
+          <a href="#">Возврат</a>
+          <a href="#">Оплата</a>
+          <a href="#">Доставка</a>
+          <a href="#">Политика конфиденциальности</a>
+          <a href="#">Карта сайта</a>
+        </div>
+      </details>
+      <details class="main-footer__column main-footer__column_catalog" open>
+        <summary class="main-footer__title">
+          Каталог
+        </summary>
+        <div class="main-footer__body">
+          <a href="#">Гардеробные</a>
+          <a href="#">Диваны и кресла</a>
+          <a href="#">Комоды</a>
+          <a href="#">Кровати</a>
+          <a href="#">Кухонные гарнитуры</a>
+          <a href="#">Прихожие</a>
+          <a href="#">Распашные шкафы</a>
+          <a href="#">Спальные гарнитуры</a>
+          <a href="#">Стелажи</a>
+          <a href="#">Стенки</a>
+          <a href="#">Столы</a>
+          <a href="#">Тумбы</a>
+          <a href="#">Шкафы</a>
+          <a href="#">Шкафы-купе</a>
+        </div>
+      </details>
+      <details class="main-footer__column" open>
+        <summary class="main-footer__title">
+          Комнаты
+        </summary>
+        <div class="main-footer__body">
+          <a href="#">Гардеробная</a>
+          <a href="#">Гостиная</a>
+          <a href="#">Детская</a>
+          <a href="#">Кабинет</a>
+          <a href="#">Кухня</a>
+          <a href="#">Прихожие</a>
+          <a href="#">Спальня</a>
+        </div>
+      </details>
+      <details class="main-footer__column main-footer__contancts" open>
+        <summary class="main-footer__title">
+          Контакты
+        </summary>
+        <div class="main-footer__body">
+          <a href="tel:88007772537">
+            <i>
+              <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_102_10975)">
+                  <path d="M16.615 6.66683H17.4999C18.4204 6.66683 19.1666 7.41302 19.1666 8.3335V11.6668C19.1666 12.5873 18.4204 13.3335 17.4999 13.3335H16.615C16.2049 16.6221 13.3996 19.1668 9.99992 19.1668V17.5002C12.7613 17.5002 14.9999 15.2616 14.9999 12.5002V7.50016C14.9999 4.73874 12.7613 2.50016 9.99992 2.50016C7.23849 2.50016 4.99992 4.73874 4.99992 7.50016V13.3335H2.49992C1.57944 13.3335 0.833252 12.5873 0.833252 11.6668V8.3335C0.833252 7.41302 1.57944 6.66683 2.49992 6.66683H3.38483C3.79491 3.37824 6.60024 0.833496 9.99992 0.833496C13.3996 0.833496 16.2049 3.37824 16.615 6.66683ZM2.49992 8.3335V11.6668H3.33325V8.3335H2.49992ZM16.6666 8.3335V11.6668H17.4999V8.3335H16.6666ZM6.46612 13.1542L7.34957 11.7407C8.11793 12.222 9.02642 12.5002 9.99992 12.5002C10.9734 12.5002 11.8819 12.222 12.6503 11.7407L13.5338 13.1542C12.5093 13.7959 11.2979 14.1668 9.99992 14.1668C8.70192 14.1668 7.4906 13.7959 6.46612 13.1542Z" fill="#1774C9"/>
+                </g>
+                <defs>
+                  <clipPath id="clip0_102_10975">
+                    <rect width="20" height="20" fill="white"/>
+                  </clipPath>
+                </defs>
+              </svg>
+            </i>
+            <p><strong>8 800 777-25-37</strong></p>
+          </a>
+          <a href="mailto:order@megamebel.com">
+            <i>
+              <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M2.50008 2.5H17.5001C17.9603 2.5 18.3334 2.8731 18.3334 3.33333V16.6667C18.3334 17.1269 17.9603 17.5 17.5001 17.5H2.50008C2.03985 17.5 1.66675 17.1269 1.66675 16.6667V3.33333C1.66675 2.8731 2.03985 2.5 2.50008 2.5ZM16.6667 6.0316L10.0599 11.9483L3.33341 6.01328V15.8333H16.6667V6.0316ZM3.75963 4.16667L10.0517 9.71833L16.2509 4.16667H3.75963Z" fill="#1774C9"/>
+              </svg>
+            </i>
+            <p>order@megamebel.com</p>
+          </a>
+          <a>
+            <i>
+              <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M11 19.158L15.5372 14.6207C18.0431 12.1149 18.0431 8.05209 15.5372 5.54623C13.0314 3.04036 8.96859 3.04036 6.46273 5.54623C3.95687 8.05209 3.95687 12.1149 6.46273 14.6207L11 19.158ZM11 21.7507L5.16637 15.9172C1.94454 12.6953 1.94454 7.47169 5.16637 4.24987C8.3882 1.02804 13.6118 1.02804 16.8337 4.24987C20.0555 7.47169 20.0555 12.6953 16.8337 15.9172L11 21.7507ZM11 11.9168C12.0126 11.9168 12.8333 11.096 12.8333 10.0835C12.8333 9.07097 12.0126 8.25016 11 8.25016C9.98745 8.25016 9.16667 9.07097 9.16667 10.0835C9.16667 11.096 9.98745 11.9168 11 11.9168ZM11 13.7502C8.97496 13.7502 7.33333 12.1085 7.33333 10.0835C7.33333 8.05845 8.97496 6.41683 11 6.41683C13.025 6.41683 14.6667 8.05845 14.6667 10.0835C14.6667 12.1085 13.025 13.7502 11 13.7502Z" fill="#1774C9"/>
+              </svg>
+            </i>
+            <p>г. Москва, Новоясеневский просп., вл7, ТЦ Калита</p>
+            <span>пн-пт: 10:00 - 20:00</span>
+          </a>
+        </div>
+      </details>
+    </div>
+    <div class="footer__middle middle-footer">
+      <iframe src="https://yandex.ru/sprav/widget/rating-badge/116135544110?type=rating" width="150" height="50" frameborder="0"></iframe>
+      <div class="middle-footer__text">При использовании любых материалов сайта, включая фотографии и тексты, активная ссылка на megamebel.com обязательна.</div>
+      <div class="middle-footer__pay">
+        <img src="/img/common/mir.svg" alt="mir">
+        <img src="/img/common/mastercard.svg" alt="mastercard.svg">
+        <img src="/img/common/visa.svg" alt="visa.svg">
+        <img src="/img/common/sber.svg" alt="sber.svg">
+      </div>
+    </div>
+    <div class="footer__bottom">
+      © 2025 «МегаМебель» Все права защищены
+    </div>
 	</div>
 </footer>
+<section class="mobile-nav _mmd3dn">
+  <a href="#" class="mobile-nav__link">
+    <img src="/img/icons/comparsion.svg" alt="comparsion">
+    <span>Сравнение</span>
+    <i style="--bgc:var(--accent-color);">4</i>
+  </a>
+  <a href="#" class="mobile-nav__link">
+    <img src="/img/icons/favs.svg" alt="favs">
+    <span>Избранное</span>
+  </a>
+  <a href="#" class="mobile-nav__link">
+    <img src="/img/icons/catalog.svg" alt="catalog">
+    <span>Каталог</span>
+  </a>
+  <a href="#" class="mobile-nav__link">
+    <img src="/img/icons/basket.svg" alt="basket">
+    <span><strong>122 589 ₽</strong></span>
+    <i>12</i>
+  </a>
+  <a href="#" class="mobile-nav__link">
+    <img src="/img/icons/user.svg" alt="user">
+    <span>Войти</span>
+  </a>
+</section>
