--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<load
 		src="src/html/_head.html"
-		title="HomePage"
+		title="Главная"
 	/>
 	<body>
 		<div class="wrapper">
@@ -360,9 +360,9 @@
               </div>
               <div class="splide__track productslider__track">
                 <div class="splide__list productslider__list">
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -411,9 +411,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_2.png" alt="product-slide-2">
                       </div>
@@ -462,9 +462,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -513,9 +513,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -564,9 +564,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -615,9 +615,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_2.png" alt="product-slide-2">
                       </div>
@@ -666,9 +666,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -717,9 +717,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -793,9 +793,9 @@
               </div>
               <div class="splide__track productslider__track">
                 <div class="splide__list productslider__list">
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -844,9 +844,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_2.png" alt="product-slide-2">
                       </div>
@@ -895,9 +895,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -946,9 +946,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -997,9 +997,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -1048,9 +1048,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_2.png" alt="product-slide-2">
                       </div>
@@ -1099,9 +1099,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -1150,9 +1150,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -1327,9 +1327,9 @@
               </div>
               <div class="splide__track productslider__track">
                 <div class="splide__list productslider__list">
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -1375,9 +1375,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_2.png" alt="product-slide-2">
                       </div>
@@ -1423,9 +1423,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -1471,9 +1471,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -1519,9 +1519,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -1567,9 +1567,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_2.png" alt="product-slide-2">
                       </div>
@@ -1615,9 +1615,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -1663,9 +1663,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="splide__slide productslider__slide product-slide">
+                  <div class="splide__slide productslider__slide product-slide" data-da-parent>
                     <a href="#" class="product-slide__link"></a>
-                    <div class="product-slide__media">
+                    <div class="product-slide__media"><a href="#" class="product-slide__quickview" data-da=".product-slide__buttons, 767, 0">Быстрый просмотр</a>
                       <div class="product-slide__image">
                         <img src="/img/home/productslider_1.png" alt="product-slide-1">
                       </div>
@@ -1736,7 +1736,7 @@
                     <span>кешбэка на второй заказ, или сразу при заказе <strong>от 100 000 ₽</strong></span>
                   </div>
                 </div>
-                <a href="#" class="bonuses-info__button">Войти или зарегестрироваться</a>
+                <a href="#" class="bonuses-info__button" data-popup="#phoneAuthPopup">Войти или зарегестрироваться</a>
               </div>
               <div class="bonuses-info__image">
                 <img src="/img/home/bonuses-info.png" alt="bonuses-info">
@@ -2107,6 +2107,7 @@
 			</main>
       <load src="src/html/_footer.html"/>
 		</div>
+    <load src="src/html/_popups.html"/>
     <load src="src/html/_js.html"/>
 	</body>
 </html>
