--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -141,7 +141,7 @@
     <span><strong>122 589 ₽</strong></span>
     <i>12</i>
   </a>
-  <a href="#" class="mobile-nav__link">
+  <a href="#" class="mobile-nav__link" data-popup="#phoneAuthPopup">
     <img src="/img/icons/user.svg" alt="user">
     <span>Войти</span>
   </a>
