--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -182,7 +182,7 @@
           <span class="_md1dn"><strong>122 589 ₽</strong></span>
           <i>12</i>
         </a>
-        <a href="#" class="middle-header__action">
+        <a href="#" class="middle-header__action" data-popup="#phoneAuthPopup">
           <img src="/img/icons/user.svg" alt="user">
           <span class="_md1dn">Войти</span>
         </a>
