--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Верстка «NEW_PROJECT_NAME»</title>
+		<title>Верстка «MegaMebel»</title>
 	</head>
 	<body>
     <!-- <canvas 
@@ -11,13 +11,14 @@
     ></canvas> -->
     <canvas id="neuro"></canvas>
 		<div class="rootpage">
-			<h1>Верстка «NEW_PROJECT_NAME»</h1>
+			<h1>Верстка «MegaMebel»</h1>
 			<div class="rootpage__info">
 				Особенности проекта
 			</div>
 			<h2>Готовые страницы:</h2>
 			<ol class="rootpage__list">
 				<li><a target="_blank" href="pages/home.html">Главная</a></li>
+				<li><a target="_blank" href="pages/listing.html">Листинг</a></li>
 			</ol>
 			<div class="rootpage__tnx">
 				<h2>Спасибо за заказ!</h2>
