--- a/src/html/_head.html
+++ b/src/html/_head.html
@@ -2,7 +2,9 @@
 	<title>{=$title}</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="/favicon-16x16.webp">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.webp">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.webp">
+	<link rel="apple-touch-icon" sizes="180x180" href="/favicon-180x180.webp">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
