--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<ol class="rootpage__list">
 				<li><a target="_blank" href="pages/home.html">Главная</a></li>
 				<li><a target="_blank" href="pages/listing.html">Листинг</a></li>
+				<li><a target="_blank" href="pages/product.html">Карточка товара</a></li>
 			</ol>
 			<div class="rootpage__tnx">
 				<h2>Спасибо за заказ!</h2>
