cart & checkout final

--- a/pages/product.html
+++ b/pages/product.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<load
 		src="src/html/_head.html"
-		title="Листинг"
+		title="Шкаф-купе Боско-1"
 	/>
 	<body>
 		<div class="wrapper">
