--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				<li><a target="_blank" href="pages/product.html">Карточка товара</a></li>
 				<li><a target="_blank" href="pages/cart.html">Корзина</a></li>
 				<li><a target="_blank" href="pages/checkout.html">Оформление заказа</a></li>
+				<li><a target="_blank" href="pages/comparsion.html">Сравнение</a></li>
 			</ol>
 			<div class="rootpage__tnx">
 				<h2>Спасибо за заказ!</h2>
